# Quick-Noise

./: .gitignore  Cargo.toml  README.md
benches/: perlin.rs  perlin_2d.rs
examples/: basic.rs
fuzz-benchmark/: Cargo.toml
fuzz-benchmark/src/: fast_noise_2_gen.rs  lcg.rs  main.rs  quick_noise_gen.rs
src/: lib.rs  main.rs
src/emit/: grayscale.rs
src/math/: random.rs  vec.rs
src/noise/: mod.rs  perlin.rs
src/noise/perlin/: batched.rs  constants.rs  containers.rs  core.rs  interpolation.rs  set_gradients.rs  single_octave.rs
src/noise/simplex/: batched.rs  core.rs
src/noise/value/: batched.rs  core.rs
src/noise/worley/: batched.rs  core.rs
src/simd/: arch_simd.rs  array_trait.rs  mod.rs  simd_array.rs  simd_traits.rs  traits.rs
src/simd/architectures/: arch_impl.rs  families.rs  macros.rs  mod.rs
src/simd/architectures/intrinsics/: avx2.rs  avx512.rs  sse.rs
src/simd/failed_simd/: intrinsics.rs  macros.rs  mod.rs  tags.rs
src/simd/simd_mask/: core.rs
src/simd/simd_vec/: core.rs  float_impl.rs  integer_impl.rs  mod.rs  sized_impl.rs  universal_impl.rs
src/testing/: profiler.rs
